<?xml version="1.0" encoding="utf-8"?><!-- Copyright 2014 Sony Corporation -->
<resources>

    <string name="app_name">Camera Remote API Sample</string>
    <string name="sample_camera">Camera Remote API Sample</string>
    <string name="msg_wifi_disconnect">(Wi-Fi disconnected)</string>
    <string name="button_take_picture">Take Picture</string>
    <string name="button_rec_start">Start movie\nrecording</string>
    <string name="button_rec_stop">Stop movie\nrecording</string>
    <string name="button_start_search">Start device discovery</string>
    <string name="button_contents_list">Contents List</string>
    <string name="msg_search_devices">Connect to compatible camera via Wi-Fi settings before device discovery.</string>
    <string name="msg_device_search_finish">Device discovery successfully completed.</string>
    <string name="msg_error_device_searching">Failed to search.\nStopped.</string>
    <string name="msg_error_api_calling">Cannot control the device by API.</string>
    <string name="msg_rec_start">Recording started.</string>
    <string name="msg_rec_stop">Recording stopped.</string>
    <string name="msg_error_take_picture">Failed to take a picture.</string>
    <string name="msg_error_connection">Failed to connect to the device.</string>
    <string name="msg_error_non_supported_device">Unsupported device in this sample app.</string>
    <string name="msg_error_content">Contents not available.</string>
    <string name="msg_error_streaming_playback">Movie playback is not supported.</string>
    <string name="no_image">No image</string>
    <string name="prompt_shoot_mode">Select shoot mode</string>
    <string name="msg_error_no_supported_shootmode">Unsupported shoot mode in this sample app.</string>
    <string name="title_activity_date_list">Date List</string>
    <string name="title_activity_contents_grid">Contents</string>
    <string name="title_activity_still_content">Still</string>
    <string name="title_activity_movie_content">Movie</string>

    <string name="preference_file_key">bernd.photobox.preference_file_key</string>

    <string name="kein_fotopapier_im_drucker">No paper in printer</string>
    <string name="loeschen_">Delete!</string>
    <string name="drucken_">Print!</string>
    <string name="abbrechen">Cancel</string>
    <string name="foto_druckt___">Printing picture…</string>
    <string name="foto_wirkilch_loeschen_">Really delete picture?</string>
    <string name="moechtest_du_das_foto_wirklich_loeschen__es_wird_dann_nicht_gedruckt_">Do you really want to delete the picture? It won\'t be printed then.</string>
    <string name="loeschen">Delete</string>
    <string name="ok">OK</string>
    <string name="touch_me_">Touch\nMe!</string>
    <string name="touch_me_one_photo">Touch Me!\n(1 photo)</string>
    <string name="touch_me_four_photos">Touch Me!\n(4 photos)</string>
    <string name="four_photos">4\nphotos!</string>
    <string name="one_photo">1\nphoto!</string>
    <string name="wir_machen_jetzt_4_fotos_">We\'re taking 4 pictures now!</string>
    <string name="bitte_fotopapier_nachlegen_">PLEASE RESTOCK PAPER!</string>
    <string name="druck_dialog_message">I\'m printing your picture now. Please don\'t pull the picture out before I let it fall down onto the drawer; I have to pull it back in three times before dropping it. Printing will take about one minute. You can continue taking pictures while I\'m printing! :)\n\n(If I haven\'t printed anything after a minute please get Bernd to fix me)</string>
    <string name="empty_dialog_message">Dang, I don\'t have any paper anymore :( Please get Bernd to restock my paper and we can continue :)</string>
    <string name="einstellungen">Settings</string>
    <string name="foto_in">. picture in…</string>
    <string name="xyz_foto_in">%1$d. picture in…</string>
    <string name="einziges_foto_in">Only picture in…</string>
    <string name="noch_xyz_bilder_im_drucker">%1$d prints left in printer (paper)</string>
    <string name="noch_xyz_drucke_in_cartridge">%1$d prints left in printer (cartridge)</string>
    <string name="bitte_cartridge_wechseln">PLEASE CHANGE CARTRIDGE!</string>
    <string name="wir_machen_jetzt_1_foto">We\'re taking 1 picture now!</string>

</resources>
