<!-- Copyright 2014 Sony Corporation -->
<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <com.example.sony.cameraremote.SimpleStreamSurfaceView
        android:id="@+id/surfaceview_liveview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="#66FFFFFF"
        android:orientation="vertical"
        android:paddingRight="10dp"
        android:visibility="gone">

        <Spinner
            android:id="@+id/spinner_shoot_mode"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp" />

        <Button
            android:id="@+id/button_take_picture"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:enabled="false"
            android:text="@string/button_take_picture"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Button
            android:id="@+id/button_rec_start_stop"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:enabled="false"
            android:text="@string/button_rec_start"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Button
            android:id="@+id/button_contents_list"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:enabled="false"
            android:text="@string/button_contents_list"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Button
            android:id="@+id/open_last_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="Open Last"
            android:textAppearance="?android:attr/textAppearanceSmall"
            />

        <Button
            android:id="@+id/switch_postviewimagesize_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="Switch size"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:onClick="onClickSwitchpostviewimagesize"
            />

        <Button
            android:id="@+id/start_series_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="Start Series"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:onClick="onClickStartSeries"
            />

        <Button
            android:id="@+id/call_params_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="Call Params"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:onClick="onClickCallParams"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="50dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_zoom_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableLeft="@android:drawable/btn_minus"
            android:visibility="gone" >
        </Button>

        <Button
            android:id="@+id/button_zoom_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableLeft="@android:drawable/btn_plus"
            android:visibility="gone" >
        </Button>
    </LinearLayout>

    <TextView
        android:id="@+id/text_camera_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|left"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/center_information_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:textSize="150sp"
        android:layout_margin="64dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:paddingLeft="64dp"
        android:paddingStart="64dp"
        android:paddingEnd="64dp"
        android:paddingRight="64dp"
        android:background="@drawable/rounded_corner"
        tools:text="2"
        tools:visibility="visible"
        />

    <ImageView
        android:id="@+id/image_picture_wipe"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_gravity="bottom|right"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/picture_wipe_boarder"
        android:contentDescription="@string/no_image"
        android:src="@android:drawable/ic_menu_report_image"
        android:visibility="invisible" />

    <RelativeLayout
        android:id="@+id/user_buttons_relativelayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <Button
            android:id="@+id/take_one_picture_button"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_above="@+id/take_four_pictures_button"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="50dp"
            android:text="@string/touch_me_one_photo"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:background="@drawable/circular_button_blue"
            android:onClick="onClickTakeOnePictureButton"
            />

        <Button
            android:id="@+id/take_four_pictures_button"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_centerInParent="true"
            android:text="@string/touch_me_four_photos"
            android:textSize="50sp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:background="@drawable/circular_button_blue"
            android:onClick="onClickTakeFourPicturesButton"
            />

        <Button
            android:id="@+id/secret_menu_button"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:visibility="visible"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:onClick="onClickSecretMenuButton"
            android:background="@null"
            />

        <TextView
            android:id="@+id/xy_pictures_left_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Noch xy Bilder im Drucker"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="24dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:textColor="@android:color/white"
            />

        <TextView
            android:id="@+id/xy_prints_left_in_cartridge_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Noch xy Drucke in Cartridge"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="24dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:textColor="@android:color/white"
            />
    </RelativeLayout>

</merge>
